[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
description = "A Monte Carlo integrator that can handle nested discrete and continuous grids"
edition = "2018"
name = "havana"
repository = "https://github.com/benruijl/havana"
version = "0.1.4"

[lib]
crate-type = ["cdylib", "rlib"]
name = "havana"

[features]
gridplotting = ["plotters"]
python_bindings = ["pyo3", "serde", "serde_yaml", "bincode"]
use_serde = ["serde"]

[dependencies.pyo3]
features = ["extension-module"]
optional = true
version = "0.13"

[dependencies]
plotters = {version = "0.2.15", optional = true}
rand = "0.8"
serde = {version = "1.0", features = ["derive"], optional = true}
serde_yaml = {version = "0.8", optional = true}
bincode = {version = "1.3", optional = true}
smallvec = {version = "1.0", features = ["serde", "union"]}
tinymt = "1.0.6"
